Add 'check all that apply' text around gender identity checkboxes

--- a/home/templates/home/eligibility_wizard_gender.html
+++ b/home/templates/home/eligibility_wizard_gender.html
@@ -33,7 +33,22 @@ You are valid and welcome here.
 	<hr>
     {% endfor %}
 {% else %}
-    {% include "bootstrap_form.html" with form=wizard.form only %}
+    {% for field in form.visible_fields %}
+    <div class="form-group">
+	{{ field.errors }}
+	{% if 'Man:' in field.label_tag %}
+	<p>What gender do you identify as? Check all that apply.</p>
+	{% endif %}
+	{{ field.label_tag }}
+	{{ field }}
+	{% if field.help_text %}
+	<div class="text-muted">{{ field.help_text|safe }}</div>
+	{% endif %}
+    </div>
+    {% endfor %}
+    {% for hidden in form.hidden_fields %}
+	{{ hidden }}
+    {% endfor %}
 {% endif %}
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" class="btn btn-secondary" type="submit" value="{{ wizard.steps.first }}">First step</button>
