--- a/home/templates/home/snippet/community_landing_snippet.html
+++ b/home/templates/home/snippet/community_landing_snippet.html
@@ -1,5 +1,9 @@
 <h1>Outreachy internships</h1>
 
+<p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+	Show Info about Outreachy
+</button></p>
+<div class="collapse" id="collapseExample">
 <h2>What is Outreachy?</h2>
 
 <p>Outreachy is a program that provides internships for people from groups traditionally underrepresented in tech.
@@ -28,12 +32,15 @@ A description of the application process can be found on the <a href="/apply/">a
 	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced at 4pm UTC on <a href="/alums/">the alums page</a></td></tr>
 	<tr><td>{{ current_round.internstarts }} to {{ current_round.internends }}</td><td>Internships period</td></tr>
 </table>
+</div>
 
 <h2>Outreachy Internships with {{ community.name }}</h2>
 <p><a href="{{ community.website }}">{{ community.name }}</a>
 is a Free and Open Source Software (FOSS) community
 that is offering internship projects through the Outreachy program.
-Additional Outreachy internship opportunities with other FOSS communities can be found on the <a href="{{ current_round.url }}">the current round page</a>.
+</p>
+<p>
+Internships with other FOSS communities can be found on the <a href="{{ current_round.url }}">the current round page</a>.
 </p>
 
 <h2>What is {{ community.name }}?</h2>
