--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -36,11 +36,6 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
 
-<h2>Submit a New FOSS community for Organizer Review</h2>
-<p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
-</p>
-<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit a New Community</a></p>
-
 {% if approved_communities or pending_communities %}
 	<h2>Mentor or Volunteer for a Participating FOSS Community</h2>
 
@@ -87,5 +82,11 @@ Call for Outreachy community coordinators, mentors, and volunteers
 	<li><a href="{{ c.get_preview_url }}">{{ c.name }}</a></li>
 {% endfor %}
 </ul>
+
+<h2>Submit a New FOSS community for Organizer Review</h2>
+<p>First, double check that the community isn't listed in the above participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
+</p>
+<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit a New Community</a></p>
+
 
 {% endblock %}
