--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -9,11 +9,12 @@ Dashboard
 <a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a> &gt; Dashboard
 <h1>Dashboard</h1>
 
-{% for status, group in groups %}
+{% for status, status_group in groups %}
 <h2>{{ status|title }}</h2>
-	{% for label, obj in group %}
+{% for label, group in status_group %}
+<h3>{{ label|title }}</h3>
+	{% for obj in group %}
 	<div class="card mb-3">
-	<div class="card-header">{{ label|title }}</div>
 	<div class="card-body">
 		<p class="card-text"><a href="{{ obj.get_preview_url }}">{{ obj }}</a></p>
 		<div class="mx-auto mr-sm-0" role="group" aria-label="Actions">
@@ -44,5 +45,6 @@ Dashboard
 	</div>
 	</div>
 	{% endfor %}
+{% endfor %}
 {% endfor %}
 {% endblock %}
