Off by one in ineligible display and wordsmithing template

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -249,7 +249,7 @@ Outreachy eligibility results
 				<li>The <strong>suggested curriculum for your degree</strong>,
 					which includes the number of credits a student takes each term.</li>
 				<li>(If applicable) A school website URL, student handbook, or other
-					<strong>documentation says students are allowed to register
+					<strong>documentation that says students are allowed to register
 					for less than the suggested amount of credits in their curriculum</strong>.</li>
 			</ul>
 		{% endif %}
