Display added mentor profile info on landing page

--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -132,7 +132,7 @@
 	<p>Does your mentor information (e.g. your mentorship style and mentor experience) look correct? If not, you can edit it.</p>
 	<p><a class="btn btn-primary" href="{{ mentor_request.get_submit_url }}">Edit Mentor Info</a></p>
 
-	<p>Does your person information (e.g. your public name, pronouns, or timezone) look correct? If not, you can edit it.</p>
+	<p>Does your person information (e.g. your public name, pronouns, timezone, location, forum username, GitHub URL, GitLab URL, Blog URL, or Twitter URL) look correct? If not, you can edit it.</p>
 	<p><a class="btn btn-primary" href="{% url 'account' %}">Edit Personal Info</a></p>
 {% endif %}
 
