--- a/home/templates/home/snippet/mentor_info_for_landing.html
+++ b/home/templates/home/snippet/mentor_info_for_landing.html
@@ -1,12 +1,24 @@
 <h4>{{ approval.mentor.public_name }}</h4>
+{% if approval.mentor.pronouns_to_participants or approval.mentor.timezone or approval.mentor.location or approval.mentor.primary_language or approval.mentor.second_language or approval.mentor.third_language or approval.mentor.fourth_language %}
+<p>Personal info:</p>
 <ul>
-	<li>Personal email: {{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</li>
 	{% if approval.mentor.pronouns_to_participants %}<li>Pronouns: {{ approval.mentor.get_pronouns_html|safe }}</li>{% endif %}
 	{% if approval.mentor.timezone %}<li>Timezone: {{ approval.mentor.get_timezone_display }}</li>{% endif %}
+	{% if approval.mentor.location %}<li>Location: {{ approval.mentor.location }}</li>{% endif %}
 	{% if approval.mentor.primary_language %}<li>Primary language: {{ approval.mentor.get_primary_language_display }}</li>{% endif %}
 	{% if approval.mentor.second_language %}<li>Second language: {{ approval.mentor.get_second_language_display }}</li>{% endif %}
 	{% if approval.mentor.third_language %}<li>Third language: {{ approval.mentor.get_third_language_display }}</li>{% endif %}
 	{% if approval.mentor.fourth_language %}<li>Fourth language: {{ approval.mentor.get_fourth_language_display }}</li>{% endif %}
+</ul>
+{% endif %}
+<p>Contact info:</p>
+<ul>
+	<li>Personal email: {{ approval.mentor.public_name }} &lt;{{ approval.mentor.account.email }}&gt;</li>
+	{% if approval.mentor.nick %}<li>Username on community forums or chat: {{ approval.mentor.nick }}</li>{% endif %}
+	{% if approval.mentor.github_url %}<li>GitHub profile: <a href="{{ approval.mentor.github_url }}">{{ approval.mentor.github_url }}</a></li>{% endif %}
+	{% if approval.mentor.gitlab_url %}<li>GitLab profile: <a href="{{ approval.mentor.gitlab_url }}">{{ approval.mentor.gitlab_url }}</a></li>{% endif %}
+	{% if approval.mentor.blog_url %}<li>Blog: <a href="{{ approval.mentor.blog_url }}">{{ approval.mentor.blog_url }}</a></li>{% endif %}
+	{% if approval.mentor.twitter_url %}<li>Twitter profile: <a href="{{ approval.mentor.twitter_url }}">{{ approval.mentor.twitter_url }}</a></li>{% endif %}
 </ul>
 <p>Each Outreachy mentor will have a different mentorship style, a preferred way to contact them, and different ways of working with interns. {{ approval.mentor.public_name}}'s mentorship style is: {{ approval.mentorship_style }}</p>
 <p>
