--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -8,7 +8,16 @@ Outreachy internships working with {{ community.name }}
 
 {% include "home/snippet/eligibility_prompts.html" %}
 
-<p><a href="{{ current_round.url }}">Outreachy Internships for {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }}</a> &gt; {{ community.name }}</p>
+<p><a href="/apply/">Why apply to Outreachy?</a> &gt;
+{% if not request.user.comrade or request.user.comrade.needs_application %}
+	<a href="{% url 'eligibility' %}">Check Eligibility</a>
+{% elif request.user.comrade.ineligible_application or request.user.comrade.pending_application %}
+	<a href="{% url 'eligibility-results' %}">Review Your Eligibility</a>
+{% else %}
+	<a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
+{% endif %}
+&gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a>
+&gt; {{ community.name }}</p>
 
 {% include "home/snippet/community_landing_snippet.html" %}
 
