--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -34,6 +34,9 @@ Outreachy internships working with {{ community.name }}
 			{% endfor %}
 		</ul>
 		{% endif %}
+		{% if request.user.comrade.eligible_application %}
+			<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
+		{% endif %}
 		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
 			<p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-open-{{ forloop.counter }}" aria-expanded="false" aria-controls="project{{ forloop.counter }}">
 				Show Project Info
@@ -59,6 +62,9 @@ Outreachy internships working with {{ community.name }}
 				<li>{{ skill.skill }}: {{ skill.get_experience_level_display }}</li>
 			{% endfor %}
 		</ul>
+		{% endif %}
+		{% if request.user.comrade.eligible_application %}
+			<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 		{% endif %}
 		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
 			<p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-closed-{{ forloop.counter }}" aria-expanded="false" aria-controls="project{{ forloop.counter }}">
