--- a/home/templates/home/snippet/contribute_prompt.html
+++ b/home/templates/home/snippet/contribute_prompt.html
@@ -1,4 +1,4 @@
-<div class="card border-info mb-3">
+<div class="card border-warning mb-3">
     <div class="card-header text-white bg-warning">A Contribution is Required</div>
     <div class="card-body">
 	<p class="card-text">
