--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -44,12 +44,16 @@ Outreachy internships working with {{ community.name }}
 			{% endif %}
 		{% endif %}
 		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
-			<p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-open-{{ forloop.counter }}" aria-expanded="false" aria-controls="project{{ forloop.counter }}">
-				Show Project Info
-			</button></p>
-			<div class="collapse" id="project-open-{{ forloop.counter }}">
-				{% include "home/snippet/project_landing_snippet.html" %}
+			<div id="project-open-accordion-{{ forloop.counter }}" class="accordion">
+				<div class="card">
+					<div class="card-header" role="tab" id="project-open-heading-{{ forloop.counter }}">
+						<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-open-accordion-{{ forloop.counter }}" href="#project-open-{{ forloop.counter }}">+ Detailed Project Information</a></h4>
+					</div>
+				<div class="collapse" id="project-open-{{ forloop.counter }}">
+					{% include "home/snippet/project_landing_snippet.html" %}
+				</div>
 			</div>
+			<br>
 		{% else %}
 			<p>Project details are hidden, see message above.</p>
 		{% endif %}
@@ -73,12 +77,16 @@ Outreachy internships working with {{ community.name }}
 			<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 		{% endif %}
 		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
-			<p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-closed-{{ forloop.counter }}" aria-expanded="false" aria-controls="project{{ forloop.counter }}">
-				Show Project Info
-			</button></p>
-			<div class="collapse" id="project-closed-{{ forloop.counter }}">
-				{% include "home/snippet/project_landing_snippet.html" %}
+			<div id="project-closed-accordion-{{ forloop.counter }}" class="accordion">
+				<div class="card">
+					<div class="card-header" role="tab" id="project-closed-heading-{{ forloop.counter }}">
+						<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-closed-accordion-{{ forloop.counter }}" href="#project-closed-{{ forloop.counter }}">Detailed Project Information</a></h4>
+					</div>
+				<div class="collapse" id="project-closed-{{ forloop.counter }}">
+					{% include "home/snippet/project_landing_snippet.html" %}
+				</div>
 			</div>
+			<br>
 		{% else %}
 			<p>Project details are hidden, see message above.</p>
 		{% endif %}
