Shorten button name for people who haven't contributed.
Now that we have an additional prompt for submitting applications,
there's no need to show the 'and Apply to This Project' in the button
text.

--- a/home/templates/home/snippet/contribute_prompt.html
+++ b/home/templates/home/snippet/contribute_prompt.html
@@ -10,7 +10,7 @@
 	In order to be eligible to be selected as an intern, you'll need to
 	record your contributions to each project. You can record your
 	contributions by going to the community landing page, finding your
-	project, and clicking 'Record Contributions and Apply to This Project'.
+	project, and clicking 'Record Contributions'.
 	</p>
     </div>
 </div>
