--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -49,8 +49,9 @@ Outreachy internships working with {{ community.name }}
 					<div class="card-header" role="tab" id="project-open-heading-{{ forloop.counter }}">
 						<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-open-accordion-{{ forloop.counter }}" href="#project-open-{{ forloop.counter }}">+ Detailed Project Information</a></h4>
 					</div>
-				<div class="collapse" id="project-open-{{ forloop.counter }}">
-					{% include "home/snippet/project_landing_snippet.html" %}
+					<div class="collapse card-body" id="project-open-{{ forloop.counter }}">
+						{% include "home/snippet/project_landing_snippet.html" %}
+					</div>
 				</div>
 			</div>
 			<br>
@@ -80,10 +81,11 @@ Outreachy internships working with {{ community.name }}
 			<div id="project-closed-accordion-{{ forloop.counter }}" class="accordion">
 				<div class="card">
 					<div class="card-header" role="tab" id="project-closed-heading-{{ forloop.counter }}">
-						<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-closed-accordion-{{ forloop.counter }}" href="#project-closed-{{ forloop.counter }}">Detailed Project Information</a></h4>
+						<h4 class="mb-0"><a data-toggle="collapse" data-parent="project-closed-accordion-{{ forloop.counter }}" href="#project-closed-{{ forloop.counter }}">+ Detailed Project Information</a></h4>
 					</div>
-				<div class="collapse" id="project-closed-{{ forloop.counter }}">
-					{% include "home/snippet/project_landing_snippet.html" %}
+					<div class="collapse card-body" id="project-closed-{{ forloop.counter }}">
+						{% include "home/snippet/project_landing_snippet.html" %}
+					</div>
 				</div>
 			</div>
 			<br>
