Display mentor IRC/etc nick correctly.
Fixes #108.

Thanks to @maskaravivek for pointing out this bug!

--- a/home/templates/home/snippet/mentor_info.html
+++ b/home/templates/home/snippet/mentor_info.html
@@ -17,5 +17,5 @@
 </ol>
 <h2>Mentor Contact Information</h2>
 <ul>
-	{% if approval.communication_channel_username %}<li>Communication channel username: {{ approval.mentor.communication_channel_username }}</li>{% else %}<li>The mentor has not provided their communication channel username.{% endif %}
+	{% if approval.communication_channel_username %}<li>Communication channel username: {{ approval.communication_channel_username }}</li>{% else %}<li>The mentor has not provided their communication channel username.{% endif %}
 </ul>
